# prototroller

./: .gitignore  .gitmodules  CMakeLists.txt  Contributions  LICENSE  Log of Attendance  README.md  commons.h  prototroller.h
Milestones/Pre Alpha/SPI-Master/: CMakeLists.txt
Milestones/Pre Alpha/SPI-Master/libraries/: SPIMaster.cpp
Milestones/Pre Alpha/SPI-Slave/: CMakeLists.txt
Milestones/Pre Alpha/SPI-Slave/libraries/: SPIComponent.cpp  SPIComponent.h
Milestones/Pre Alpha/SPI-Slave/src/: spi-slave.cpp
Schematics/: prototroller_symbols.bak  prototroller_symbols.kicad_sym
Schematics/5_32_decoder/: 5_32_decoder.kicad_prl
Schematics/Crystal_Oscillator/: Crystal_Oscillator.kicad_prl  Crystal_Oscillator.kicad_sch  fp-info-cache
Schematics/Flash_Memory_8MB/: Flash_Memory_8MB.kicad_prl  Flash_Memory_8MB.kicad_sch
Schematics/master_board/: 5-to-32.kicad_sch  fp-info-cache  fp-lib-table  master_board.csv  master_board.kicad_pcb  master_board.kicad_prl  master_board.kicad_pro  master_board.kicad_sch  master_board.xml  sym-lib-table
Schematics/master_board/gerber/: master_board-B_Cu.gbr  master_board-B_Mask.gbr  master_board-B_Silkscreen.gbr  master_board-F_Mask.gbr  master_board-F_Paste.gbr  master_board.drl
Schematics/models/: 3220-10-0300-00 3D.stp:Zone.Identifier  868-10-006-00-011101.step  868-10-006-00-011101.step:Zone.Identifier  D6C40F1LFS.stp:Zone.Identifier  UHD111A-FKA-C3K23E1L3VG5ZB3Z3.stp  UHD111A-FKA-C3K23E1L3VG5ZB3Z3.stp:Zone.Identifier  W25Q16JVSSIQ.stp  W25Q16JVSSIQ.stp:Zone.Identifier
Schematics/module_board/: #auto_saved_files#  _autosave-module_board.kicad_pcb  _autosave-module_board.kicad_sch  fp-info-cache  fp-lib-table  module_board.kicad_pcb  module_board.kicad_prl  module_board.kicad_pro  module_board.kicad_sch  module_board.xml  sym-lib-table
Schematics/module_board/gerber/: module_board-B_Cu.gbr  module_board-B_Mask.gbr  module_board-B_Silkscreen.gbr  module_board-Edge_Cuts.gbr  module_board-F_Mask.gbr  module_board.drl
Schematics/module_components/: #auto_saved_files#  module_components.kicad_prl  module_components.kicad_pro  module_components.kicad_sch
Schematics/prototroller_footprints.pretty/: LED_Cree-UHD111A.kicad_mod  Mag_Pogo_6P_P2.2mm_Female.kicad_mod  Switch_D6C40F1LFS.kicad_mod
host/: CMakeLists.txt
ide/: launch.json  settings.json  tasks.json
master/: CMakeLists.txt
master/libraries/: SPIMaster.cpp  SPIMaster.h
master/src/: main.cpp  master-debug.cpp  master.cpp  prototroller_master.h  spi-master.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
models/: 1x1_module_open_v0.stl  1x1_module_open_v1.stl  2x1_module_open_v0.stl  2x1_module_open_v1.stl  Chassis_Bottom_v0.stl  Chassis_Bottom_v1.stl  Chassis_Bottom_v2.stl  Chassis_Handle_L_v0.stl  Chassis_Handle_R_v0.stl  Chassis_Top_v0.stl  Chassis_Top_v1.stl  Chassis_Top_v2.stl  Master Enclosure v13.f3d  chassis.stl  chassis_lid.stl  enclosure.stl
module/: CMakeLists.txt
module/libraries/: CAL.cpp  CAL.h  Component.cpp  Component.h  SPISlave.cpp  SPISlave.h
module/src/: accel.cpp  button.cpp  button_maintained.cpp  button_momentary.cpp  dpad.cpp  gyro.cpp  joystick.cpp  led.cpp  slider.cpp  spi-slave.cpp  twist_switch.cpp  xyab.cpp
schematics/: generate_bom.py  prototroller_symbols.bak  prototroller_symbols.kicad_sym
schematics/5_32_decoder/: 5_32_decoder.kicad_pro  5_32_decoder.kicad_sch  fp-info-cache
schematics/Crystal_Oscillator/: Crystal_Oscillator.kicad_pro
schematics/Flash_Memory_8MB/: Flash_Memory_8MB.kicad_pro  Flash_Memory_8MB.kicad_sch
schematics/master_board/: 5-to-32.kicad_sch  fp-info-cache  fp-lib-table  master_board.kicad_pcb  master_board.kicad_prl  master_board.kicad_sch  sym-lib-table
schematics/master_board/gerber/: master_board-B_Cu.gbr  master_board-B_Mask.gbr  master_board-B_Paste.gbr  master_board-B_Silkscreen.gbr  master_board-Edge_Cuts.gbr  master_board-F_Cu.gbr  master_board-F_Mask.gbr  master_board-F_Paste.gbr  master_board-F_Silkscreen.gbr  master_board-job.gbrjob  master_board.drl
schematics/master_board_rev_a/: fp-info-cache  master_board.kicad_pro
schematics/master_board_rev_a/gerber/: master_board-B_Paste.gbr  master_board-Edge_Cuts.gbr  master_board-F_Cu.gbr
schematics/models/: 868-22-006-00-011101.step  D6C40F1LFS.stp  XTAL_ABLS_ABR.step
schematics/module_board/: fp-info-cache  fp-lib-table  module_board.csv  module_board.kicad_pcb  module_board.kicad_prl  module_board.kicad_sch
schematics/module_board/gerber/: module_board-B_Cu.gbr  module_board-B_Mask.gbr  module_board-B_Paste.gbr  module_board-B_Silkscreen.gbr  module_board-Edge_Cuts.gbr  module_board-F_Cu.gbr  module_board-F_Mask.gbr  module_board-F_Paste.gbr  module_board-F_Silkscreen.gbr  module_board-job.gbrjob  module_board.drl
schematics/module_board_rev_a/gerber/: module_board-F_Paste.gbr  module_board-job.gbrjob
schematics/module_components/: module_components.kicad_prl  module_components.kicad_sch
schematics/prototroller_footprints.pretty/: LED_Cree-UHD111A.kicad_mod  Mag_Pogo_6P_P2.2mm_Female.kicad_mod  Mag_Pogo_6P_P2.2mm_Male.kicad_mod  Switch_D6C40F1LFS.kicad_mod  XTAL_ABLS-12.000MHZ-B4-T.kicad_mod
